@@ -1,49 +1,0 @@
-
-/**************************************************************************
- *                                                                        *
- *  Regina - A Normal Surface Theory Calculator                           *
- *  Computational Engine                                                  *
- *                                                                        *
- *  Copyright (c) 1999-2008, Ben Burton                                   *
- *  For further details contact Ben Burton (bab@debian.org).              *
- *                                                                        *
- *  This program is free software; you can redistribute it and/or         *
- *  modify it under the terms of the GNU General Public License as        *
- *  published by the Free Software Foundation; either version 2 of the    *
- *  License, or (at your option) any later version.                       *
- *                                                                        *
- *  This program is distributed in the hope that it will be useful, but   *
- *  WITHOUT ANY WARRANTY; without even the implied warranty of            *
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU     *
- *  General Public License for more details.                              *
- *                                                                        *
- *  You should have received a copy of the GNU General Public             *
- *  License along with this program; if not, write to the Free            *
- *  Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston,       *
- *  MA 02110-1301, USA.                                                   *
- *                                                                        *
- **************************************************************************/
-
-/* end stub */
-
-#include <algorithm>
-#include <sstream>
-#include "census/ncensus.h"
-#include "census/ngluingperms.h"
-#include "progress/nprogressmanager.h"
-#include "progress/nprogresstypes.h"
-#include "triangulation/ntriangulation.h"
-#include "utilities/memutils.h"
-
-namespace regina {
-
-unsigned long NCensus::findAllCompletions(NPacket* parent,
-        NTriangulation* base, NBoolSet finiteness,
-        NBoolSet orientability, AcceptTriangulation sieve,
-        void* sieveArgs, NProgressManager* manager) {
-    // TODO: Currently does nothing.
-    return 0;
-}
-
-} // namespace regina
-
